--- a/index.html
+++ b/index.html
@@ -75,9 +75,11 @@
             <div class="informacao">
                 <h1>AQUI NÃO SE <br> <span>TREINA FOFO</span></h1>
                 <p>Transforme-se na nossa academia! Oferecemos equipamentos modernos, instrutores qualificados e aulas para todos os níveis. Alcance seus objetivos fitness conosco. Experimente hoje!</p>
-                <li>
-                    <a href="#">Começar</a>
-                </li>
+                <ul>
+                    <li class="item-introducao">
+                        <a href="#"><img src="media/img/arrow.png" alt="">Começar</a>
+                    </li>
+                </ul>
             </div>
             <div class="imagem"><img src="media/img/homem_treinando 1.png" alt=""></div>
         </div>
@@ -95,8 +97,52 @@
             <p>MONTAMOS SEU TREINO</p>
         </div>
     </section>
-    <section>
-        <h1>Nossos <span>Diferenciais</span></h1>
+    <section class="diferenciais-bg">
+        <div class="titulo-diferenciais">
+            <h1>Nossos <span>Diferenciais</span></h1>
+        </div>
+        <div class="diferenciais">
+            <div class="equipe">
+                <img src="media/img/sport_icon.png" alt="">
+                <h2>Equipe Qualificada</h2>
+                <p>Profissionais altamente capacitados e motivados a ajudá-lo a alcançar seus objetivos.</p>
+                <ul>
+                    <li class="item-introducao">
+                        <a href="#"><img src="media/img/arrow.png" alt="">Conheça nossos profissionais</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="ambiente">
+                <img src="media/img/haltere_icon.png" alt="">
+                <h2>Ambiente Motivador</h2>
+                <p>Um ambiente seguro e inspirador para ajudá-lo a manter-se motivado durante seus treinos.</p>
+                <ul>
+                    <li class="item-introducao">
+                        <a href="#"><img src="media/img/arrow.png" alt="">Faça um tour virtual</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="aulas">
+                <img src="media/img/trainer _icon.png" alt="">
+                <h2>Aulas Diversas</h2>
+                <p>Oferecemos uma ampla variedade de aulas, desde musculação até dança, para atender a todos os interesses.</p>
+                <ul>
+                    <li class="item-introducao">
+                        <a href="#"><img src="media/img/arrow.png" alt="">Ver Modalidades</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="equipamentos">
+                <img src="media/img/gym_icon.png" alt="">
+                <h2>Equipamentos Modernos</h2>
+                <p>Mantemos nossos equipamentos atualizados para garantir a segurança e eficiência de nossos clientes.</p>
+                <ul>
+                    <li class="item-introducao">
+                        <a href="#"><img src="media/img/arrow.png" alt="">Faça um Tour Virtual</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </section>
 
 
