--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </li>
         </ul>
     </header>
-    <section class="introducao-bg">
+    <main class="introducao-bg">
         <div class="introducao">
             <div class="informacao">
                 <h1>AQUI NÃO SE <br> <span>TREINA FOFO</span></h1>
@@ -83,21 +83,21 @@
             </div>
             <div class="imagem"><img src="media/img/homem_treinando 1.png" alt=""></div>
         </div>
-    </section>
+    </main>
     <section class="letreiro-bg">
         <div class="letreiro">
-            <p>CONSULTORIA INDIVIDUAL</p>
+            <p>Consultoria Indidvidual</p>
             <img src="media/img/halter.png" alt="">
-            <p>+20 PROFESSORES</p>
+            <p>+20 Professores</p>
             <img src="media/img/halter.png" alt="">
-            <p>TREINE DA SUA FORMA</p>
+            <p>Treine da sua forma</p>
             <img src="media/img/halter.png" alt="">
-            <p>+15 UNDIDADES</p>
+            <p>+15 Unidades</p>
             <img src="media/img/halter.png" alt="">
-            <p>MONTAMOS SEU TREINO</p>
+            <p>Montamos seu treino</p>
         </div>
     </section>
-    <section class="diferenciais-bg">
+    <article class="diferenciais-bg">
         <div class="titulo-diferenciais">
             <h1>Nossos <span>Diferenciais</span></h1>
         </div>
@@ -143,9 +143,56 @@
                 </ul>
             </div>
         </div>
+    </article>
+    <section class="planos-bg">
+        <div class="planos">
+            <div class="treino-1">
+                <img src="media/img/treino_1.jpg" alt="">
+                <h2>Passe de um Dia</h2>
+                <div class="planos-preco">
+                    <div>
+                        <p>teste Gratuitamente</p>
+                    </div>
+                    <div>
+                        <div>
+                            <p>Selecionar</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="treino-2">
+                <div class="item-central">
+                    <p>Recomendado por usuários</p>
+                </div>
+                <img src="media/img/treino_2.jpg alt="">
+                <h2>Passe de um Dia</h2>
+                <div class=" planos-preco">
+                <div>
+                    <p>À partir de <br><span>R$99,90</span></p>
+                </div>
+                <div>
+                    <div>
+                        <p>Selecionar</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="treino-3">
+            <img src="media/img/treino_3.jpg" alt="">
+            <h2>Passe de um Dia</h2>
+            <div class="planos-preco">
+                <div>
+                    <p>À partir de <br><span>R$999,00</span></p>
+                </div>
+                <div>
+                    <div>
+                        <p>Selecionar</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
     </section>
-
-
     <script src="js/script.js"></script>
 </body>
 
