--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <div class="item-central">
                     <p>Recomendado por usuários</p>
                 </div>
-                <img src="media/img/treino_2.jpg alt="">
+                <img src="media/img/treino_2.jpg" alt="">
                 <h2>Passe de um Dia</h2>
                 <div class=" planos-preco">
                 <div>
