--- a/index.html
+++ b/index.html
@@ -167,32 +167,44 @@
                 <img src="media/img/treino_2.jpg" alt="">
                 <h2>Passe de um Dia</h2>
                 <div class=" planos-preco">
-                <div>
-                    <p>À partir de <br><span>R$99,90</span></p>
-                </div>
-                <div>
                     <div>
-                        <p>Selecionar</p>
+                        <p>À partir de <br><span>R$99,90</span></p>
+                    </div>
+                    <div>
+                        <div>
+                            <p>Selecionar</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="treino-3">
-            <img src="media/img/treino_3.jpg" alt="">
-            <h2>Passe de um Dia</h2>
-            <div class="planos-preco">
-                <div>
-                    <p>À partir de <br><span>R$999,00</span></p>
-                </div>
-                <div>
+            <div class="treino-3">
+                <img src="media/img/treino_3.jpg" alt="">
+                <h2>Passe de um Dia</h2>
+                <div class="planos-preco">
                     <div>
-                        <p>Selecionar</p>
+                        <p>À partir de <br><span>R$999,00</span></p>
+                    </div>
+                    <div>
+                        <div>
+                            <p>Selecionar</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
         </div>
     </section>
+    <section class="vantagens-bg">
+        <div class="vantagens">
+               <div><img src="media/img/homem_e_mulher_treinando.png" alt=""></div>
+               <div>
+                <h1>Faça Parte <span>da família</span></h1>
+                <p>Nossa academia tem milhares de clientes satisfeitos com resultados surpreendentes. Junte-se a nós e comece a transformar seu corpo agora!</p>
+                <h2>+15</h2>
+                <p>Unidades na cidade de São Paulo</p>
+               </div>
+        </div>
+    </section>
+
     <script src="js/script.js"></script>
 </body>
 
