--- a/index.html
+++ b/index.html
@@ -195,16 +195,54 @@
     </section>
     <section class="vantagens-bg">
         <div class="vantagens">
-               <div><img src="media/img/homem_e_mulher_treinando.png" alt=""></div>
-               <div>
-                <h1>Faça Parte <span>da família</span></h1>
-                <p>Nossa academia tem milhares de clientes satisfeitos com resultados surpreendentes. Junte-se a nós e comece a transformar seu corpo agora!</p>
-                <h2>+15</h2>
-                <p>Unidades na cidade de São Paulo</p>
-               </div>
+            <div><img src="media/img/homem_e_mulher_treinando.png" alt=""></div>
+            <div>
+                <div class="titulo-vantagens">
+                    <h1>Faça Parte <span>da família</span></h1>
+                    <p>Nossa academia tem milhares de clientes satisfeitos com resultados surpreendentes. Junte-se a nós e comece a transformar seu corpo agora!</p>
+                </div>
+                <div class="vantangens-itens">
+                    <h2>+15</h2>
+                    <p>Unidades na cidade de São Paulo</p>
+                </div>
+                <div class="vantangens-itens">
+                    <h2>+2000</h2>
+                    <p>Alunos matriculados em nossas unidades</p>
+                </div>
+                <div class="vantangens-itens">
+                    <h2>+100</h2>
+                    <p>Professores altamente qualificados</p>
+                </div>
+            </div>
         </div>
     </section>
-
+    <section class="contato-bg">
+        <div class="contato">
+            <div>
+                <h1>Entre em Contato</h1>
+                <p>Matricule-se agora mesmo! Fale com um de nossos atendentes</p>
+                <form class="newsletter-form">
+                    <input type="text" placeholder="Nome">
+                </form>
+                <form class="newsletter-form">
+                    <input type="number" placeholder="Telefone">
+                </form>
+                <ul>
+                    <li class="item-contato">
+                        <a href="#"><img src="media/img/arrow.png" alt="">Solicitar Contato</a>
+                    </li>
+                </ul>
+            </div>
+            <div><img src="media/img/mulher-treinando.png" alt=""></div>
+        </div>
+    </section>
+    <section class="bg">
+    </section>
+    <footer class="footer-bg">
+        <div class="footer">
+            <p>Desenvolvido por<span>Juberlandio</span></p>
+        </div>
+    </footer>
     <script src="js/script.js"></script>
 </body>
 
