--- a/index.html
+++ b/index.html
@@ -71,17 +71,22 @@
         </ul>
     </header>
     <main class="introducao-bg">
-        <div class="introducao">
+        <div class="introducao container">
             <div class="informacao">
-                <h1>AQUI NÃO SE <br> <span>TREINA FOFO</span></h1>
-                <p>Transforme-se na nossa academia! Oferecemos equipamentos modernos, instrutores qualificados e aulas para todos os níveis. Alcance seus objetivos fitness conosco. Experimente hoje!</p>
+                <h1 class="font-2-xl cor-0">AQUI NÃO SE <br> <span class="font-1-xxl">TREINA FOFO</span></h1>
+                <p class="font-3-m cor-0">Transforme-se na nossa academia! Oferecemos equipamentos modernos, instrutores qualificados e aulas para todos os níveis. Alcance seus objetivos fitness conosco. Experimente hoje!</p>
                 <ul>
                     <li class="item-introducao">
-                        <a href="#"><img src="media/img/arrow.png" alt="">Começar</a>
+                        <a class="item-introducao-a font-1-bn cor-0" href="#">Começar<img class="item-introducao-img" src="media/img/Vector 5.svg" alt=""></a>
                     </li>
                 </ul>
             </div>
             <div class="imagem"><img src="media/img/homem_treinando 1.png" alt=""></div>
+        </div>
+        <div class="container-cores">
+            <div class="cor-primaria"></div>
+            <div class="cor-secundaria"></div>
+            <div class="cor-terciaria"></div>
         </div>
     </main>
     <section class="letreiro-bg">
