--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </li>
         </ul>
     </header>
-    <main class="introducao-bg box-apresentacao cor-principal">
+    <main class="introducao-bg box-apresentacao">
         <div class="introducao container">
             <div class="informacao">
                 <h1 class="font-2-xl cor-0">AQUI NÃO SE <br> <span class="font-1-xxl">TREINA FOFO</span></h1>
@@ -81,7 +81,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="imagem"><img src="media/img/homem_treinando 1.png" alt=""></div>
+            <div class="imagem-introducao"><img src="media/img/homem_treinando 1.png" alt=""></div>
             <div class="container-cores">
                 <div class="cor-primaria"></div>
                 <div class="cor-secundaria"></div>
