--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
     </main>
     <section class="letreiro-bg">
         <div class="letreiro">
-            <p>Consultoria Indidvidual</p>
+            <p class="texto-letreiro font-1-bn cor-0">Consultoria Indidvidual</p>
             <img src="media/img/halter.png" alt="">
-            <p>+20 Professores</p>
+            <p class="texto-letreiro font-1-bn cor-0">+20 Professores</p>
             <img src="media/img/halter.png" alt="">
-            <p>Treine da sua forma</p>
+            <p class="texto-letreiro font-1-bn cor-0">Treine da sua forma</p>
             <img src="media/img/halter.png" alt="">
-            <p>+15 Unidades</p>
-            <img src="media/img/halter.png" alt="">
-            <p>Montamos seu treino</p>
+            <p class="texto-letreiro font-1-bn cor-0">+15 Unidades</p>
+            <img src="media/img/halter.png " alt="">
+            <p class="texto-letreiro font-1-bn cor-0">Montamos seu treino</p>
         </div>
     </section>
     <article class="diferenciais-bg">
