Commit Diferenciais Não Responsivo

--- a/index.html
+++ b/index.html
@@ -104,48 +104,40 @@
     </section>
     <article class="diferenciais-bg">
         <div class="titulo-diferenciais">
-            <h1>Nossos <span>Diferenciais</span></h1>
+            <h1 class="font-2-l cor-0">Nossos <span class="font-1-l">Diferenciais</span></h1>
         </div>
-        <div class="diferenciais">
+        <div class="diferenciais container">
             <div class="equipe">
-                <img src="media/img/sport_icon.png" alt="">
-                <h2>Equipe Qualificada</h2>
-                <p>Profissionais altamente capacitados e motivados a ajudá-lo a alcançar seus objetivos.</p>
-                <ul>
-                    <li class="item-introducao">
-                        <a href="#"><img src="media/img/arrow.png" alt="">Conheça nossos profissionais</a>
-                    </li>
-                </ul>
+                <img class="imagem-ilustracao" src="media/img/sport_icon.png" alt="">
+                <h2 class="font-1-s cor-0">Equipe Qualificada</h2>
+                <p class="font-3-m cor-0">Profissionais altamente capacitados e motivados a ajudá-lo a alcançar seus objetivos.</p>
+                <li class="item-introducao font-1-xs cor-0">
+                    <a href="#">Conheça nossos<br> profissionais<img src="media/img/arrow-diferenciais.png" alt=""></a>
+                </li>
             </div>
             <div class="ambiente">
-                <img src="media/img/haltere_icon.png" alt="">
-                <h2>Ambiente Motivador</h2>
-                <p>Um ambiente seguro e inspirador para ajudá-lo a manter-se motivado durante seus treinos.</p>
-                <ul>
-                    <li class="item-introducao">
-                        <a href="#"><img src="media/img/arrow.png" alt="">Faça um tour virtual</a>
-                    </li>
-                </ul>
+                <img class="imagem-ilustracao" src="media/img/haltere_icon.png" alt="">
+                <h2 class="font-1-s cor-0">Ambiente Motivador</h2>
+                <p class="font-3-m cor-0">Um ambiente seguro e inspirador para ajudá-lo a manter-se motivado durante seus treinos.</p>
+                <li class="item-introducao font-1-xs cor-0">
+                    <a href="#">Faça um tour<br> virtual<img src="media/img/arrow-diferenciais.png" alt=""></a>
+                </li>
             </div>
             <div class="aulas">
-                <img src="media/img/trainer _icon.png" alt="">
-                <h2>Aulas Diversas</h2>
-                <p>Oferecemos uma ampla variedade de aulas, desde musculação até dança, para atender a todos os interesses.</p>
-                <ul>
-                    <li class="item-introducao">
-                        <a href="#"><img src="media/img/arrow.png" alt="">Ver Modalidades</a>
-                    </li>
-                </ul>
+                <img class="imagem-ilustracao" src="media/img/trainer _icon.png" alt="">
+                <h2 class="font-1-s cor-0">Aulas Diversas</h2>
+                <p class="font-3-m cor-0">Oferecemos uma ampla variedade de aulas, desde musculação até dança, para atender a todos os interesses.</p>
+                <li class="item-introducao font-1-xs cor-0">
+                    <a href="#">Ver Modalidades<img src="media/img/arrow-diferenciais.png" alt=""></a>
+                </li>
             </div>
             <div class="equipamentos">
-                <img src="media/img/gym_icon.png" alt="">
-                <h2>Equipamentos Modernos</h2>
-                <p>Mantemos nossos equipamentos atualizados para garantir a segurança e eficiência de nossos clientes.</p>
-                <ul>
-                    <li class="item-introducao">
-                        <a href="#"><img src="media/img/arrow.png" alt="">Faça um Tour Virtual</a>
-                    </li>
-                </ul>
+                <img class="imagem-ilustracao" src="media/img/gym_icon.png" alt="">
+                <h2 class="font-1-s cor-0">Equipamentos Modernos</h2>
+                <p class="font-3-m cor-0">Mantemos nossos equipamentos atualizados para garantir a segurança e eficiência de nossos clientes.</p>
+                <li class="item-introducao font-1-xs cor-0">
+                    <a href="#">Faça um Tour<br> Virtual<img src="media/img/arrow-diferenciais.png" alt=""></a>
+                </li>
             </div>
         </div>
     </article>
