--- a/index.html
+++ b/index.html
@@ -111,33 +111,43 @@
                 <img class="imagem-ilustracao" src="media/img/sport_icon.png" alt="">
                 <h2 class="font-1-s cor-0">Equipe Qualificada</h2>
                 <p class="font-3-m cor-0">Profissionais altamente capacitados e motivados a ajudá-lo a alcançar seus objetivos.</p>
-                <li class="item-introducao font-1-xs cor-0">
-                    <a href="#">Conheça nossos<br> profissionais<img src="media/img/arrow-diferenciais.png" alt=""></a>
-                </li>
+                <ul class="item-ul">
+                    <li class="item-introducao-diferenciais font-1-xs cor-0">
+                        <a href="#">Conheça nossos<br> profissionais<img src="media/img/arrow-diferenciais.png" alt=""></a>
+                    </li>
+                </ul>
             </div>
             <div class="ambiente">
                 <img class="imagem-ilustracao" src="media/img/haltere_icon.png" alt="">
                 <h2 class="font-1-s cor-0">Ambiente Motivador</h2>
                 <p class="font-3-m cor-0">Um ambiente seguro e inspirador para ajudá-lo a manter-se motivado durante seus treinos.</p>
-                <li class="item-introducao font-1-xs cor-0">
-                    <a href="#">Faça um tour<br> virtual<img src="media/img/arrow-diferenciais.png" alt=""></a>
-                </li>
+                <ul class="item-ul">
+                    <li class="item-introducao-diferenciais font-1-xs cor-0">
+                        <a href="#">Faça um tour<br> virtual<img src="media/img/arrow-diferenciais.png" alt=""></a>
+                    </li>
+                </ul>
             </div>
             <div class="aulas">
                 <img class="imagem-ilustracao" src="media/img/trainer _icon.png" alt="">
                 <h2 class="font-1-s cor-0">Aulas Diversas</h2>
                 <p class="font-3-m cor-0">Oferecemos uma ampla variedade de aulas, desde musculação até dança, para atender a todos os interesses.</p>
-                <li class="item-introducao font-1-xs cor-0">
-                    <a href="#">Ver Modalidades<img src="media/img/arrow-diferenciais.png" alt=""></a>
-                </li>
+                <ul class="item-ul">
+                    <li class="item-introducao-diferenciais font-1-xs cor-0">
+                        <a href="#">Ver Modalidades<img src="media/img/arrow-diferenciais.png" alt=""></a>
+                    </li>
+                </ul>
             </div>
             <div class="equipamentos">
                 <img class="imagem-ilustracao" src="media/img/gym_icon.png" alt="">
                 <h2 class="font-1-s cor-0">Equipamentos Modernos</h2>
                 <p class="font-3-m cor-0">Mantemos nossos equipamentos atualizados para garantir a segurança e eficiência de nossos clientes.</p>
-                <li class="item-introducao font-1-xs cor-0">
-                    <a href="#">Faça um Tour<br> Virtual<img src="media/img/arrow-diferenciais.png" alt=""></a>
-                </li>
+                <div class="item-ul">
+                <ul>
+                    <li class="item-introducao-diferenciais font-1-xs cor-0">
+                        <a href="#">Faça um Tour<br>Virtual<img src="media/img/arrow-diferenciais.png" alt=""></a>
+                    </li>
+                </ul>
+            </div>
             </div>
         </div>
     </article>
