Commit Inicial Responsivo Introdução

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <p class="texto-letreiro font-1-bn cor-0">Montamos seu treino</p>
         </div>
     </section>
-    <article class="diferenciais-bg">
+    <!-- <article class="diferenciais-bg">
         <div class="titulo-diferenciais">
             <h1 class="font-2-l cor-0">Nossos <span class="font-1-l">Diferenciais</span></h1>
         </div>
@@ -150,8 +150,8 @@
             </div>
             </div>
         </div>
-    </article>
-    <section class="planos-bg">
+    </article> -->
+    <!-- <section class="planos-bg">
         <div class="planos">
             <div class="treino-1">
                 <img src="media/img/treino_1.jpg" alt="">
@@ -249,7 +249,7 @@
         <div class="footer">
             <p>Desenvolvido por<span>Juberlandio</span></p>
         </div>
-    </footer>
+    </footer> -->
     <script src="js/script.js"></script>
 </body>
 
