--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div id="menu-oculto" class="mobile-menu" onclick="abrir()">
                 <div class="primeiro"></div>
                 <div class="segundo"></div>
-                <div class="terceiro"></div>
+                <!-- <div class="terceiro"></div> -->
             </div>
         </nav>
         <ul id="menu-items" class="menu-items cor-0 font-1-b">
