--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="introducao container">
             <div class="informacao">
                 <h1 class="font-2-xl cor-0">AQUI NÃO SE <br> <span class="font-1-xxl">TREINA FOFO</span></h1>
-                <p class="paragrafo-introducao font-3-m cor-0">Transforme-se na nossa academia! Oferecemos equipamentos modernos, instrutores qualificados e aulas para todos os níveis. Alcance seus objetivos fitness conosco. Experimente hoje!</p>
+                <p class=" font-3-m cor-0">Transforme-se na nossa academia! Oferecemos equipamentos modernos, instrutores qualificados e aulas para todos os níveis. Alcance seus objetivos fitness conosco. Experimente hoje!</p>
                 <ul>
                     <li class="item-introducao">
                         <a class="item-introducao-a font-1-bn cor-0" href="#">Começar<img class="item-introducao-img" src="media/img/Vector 5.svg" alt=""></a>
@@ -102,7 +102,7 @@
             <p class="texto-letreiro font-1-bn cor-0">Montamos seu treino</p>
         </div>
     </section>
-    <!-- <article class="diferenciais-bg">
+    <article class="diferenciais-bg">
         <div class="titulo-diferenciais">
             <h1 class="font-2-l cor-0">Nossos <span class="font-1-l">Diferenciais</span></h1>
         </div>
@@ -150,7 +150,7 @@
             </div>
             </div>
         </div>
-    </article> -->
+    </article>
     <!-- <section class="planos-bg">
         <div class="planos">
             <div class="treino-1">
