Commit Inicial dia 26 01 2024

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <p class=" font-3-m cor-0">Transforme-se na nossa academia! Oferecemos equipamentos modernos, instrutores qualificados e aulas para todos os níveis. Alcance seus objetivos fitness conosco. Experimente hoje!</p>
                 <ul>
                     <li class="item-introducao">
-                        <a class="item-introducao-a font-1-bn cor-0" href="#">Começar<img class="item-introducao-img" src="media/img/Vector 5.svg" alt=""></a>
+                        <a class="item-introducao-a font-1-bn cor-0" href="#">Começar<img class="item-introducao-img" src="media/svg/arrow_introducao.svg" alt=""></a>
                     </li>
                 </ul>
             </div>
@@ -113,7 +113,7 @@
                 <p class="font-3-m cor-0">Profissionais altamente capacitados e motivados a ajudá-lo a alcançar seus objetivos.</p>
                 <ul>
                     <li class="item-introducao-diferenciais font-1-xs cor-0">
-                        <a href="#">Conheça nossos<br> profissionais<img src="media/img/arrow-diferenciais.png" alt=""></a>
+                        <a href="#">Conheça nossos<br> profissionais<img src="media/svg/arrow_diferenciais.svg" alt=""></a>
                     </li>
                 </ul>
             </div>
@@ -123,7 +123,7 @@
                 <p class="font-3-m cor-0">Um ambiente seguro e inspirador para ajudá-lo a manter-se motivado durante seus treinos.</p>
                 <ul>
                     <li class="item-introducao-diferenciais font-1-xs cor-0">
-                        <a href="#">Faça um tour<br> virtual<img src="media/img/arrow-diferenciais.png" alt=""></a>
+                        <a href="#">Faça um tour<br> virtual<img src="media/svg/arrow_diferenciais.svg" alt=""></a>
                     </li>
                 </ul>
             </div>
@@ -133,7 +133,7 @@
                 <p class="font-3-m cor-0">Oferecemos uma ampla variedade de aulas, desde musculação até dança, para atender a todos os interesses.</p>
                 <ul>
                     <li class="item-introducao-diferenciais font-1-xs cor-0">
-                        <a href="#">Ver Modalidades<img src="media/img/arrow-diferenciais.png" alt=""></a>
+                        <a href="#">Ver Modalidades<img src="media/svg/arrow_diferenciais.svg" alt=""></a>
                     </li>
                 </ul>
             </div>
@@ -144,7 +144,7 @@
                 <div class="item-ul">
                 <ul>
                     <li class="item-introducao-diferenciais font-1-xs cor-0">
-                        <a href="#">Faça um Tour<br>Virtual<img src="media/img/arrow-diferenciais.png" alt=""></a>
+                        <a href="#">Faça um Tour<br>Virtual<img src="media/svg/arrow_diferenciais.svg" alt=""></a>
                     </li>
                 </ul>
             </div>
