--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
         </nav>
         <ul id="menu-items" class="menu-items cor-0 font-1-b">
             <li class="menu-item">
-                <a href="#about">SOBRE</a>
+                <a  href="#about">SOBRE</a>
             </li>
             <li class="menu-item">
-                <a href="#services">SERVIÇOS</a>
+                <a onclick="abrir()" href="#services">SERVIÇOS</a>
             </li>
             <li class="menu-item">
-                <a href="#prices">PREÇOS</a>
+                <a onclick="abrir()" href="#prices">PREÇOS</a>
             </li>
             <LI class="menu-item">
-                <a href="#contact">CONTATO</a>
+                <a onclick="abrir()" href="#contact">CONTATO</a>
             </LI>
             <li class="menu-item">
-                <a href="#">REGISTRE-SE</a>
+                <a onclick="abrir()" href="#">REGISTRE-SE</a>
             </li>
         </ul>
     </header>
