Commit Inicial dia 26 01 2024

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div id="menu-oculto" class="mobile-menu" onclick="abrir()">
                 <div class="primeiro"></div>
                 <div class="segundo"></div>
-                <!-- <div class="terceiro"></div>  -->
+                <!-- <div class="terceiro"></div> -->
             </div>
         </nav>
         <ul id="menu-items" class="menu-items cor-0 font-1-b">
@@ -69,9 +69,10 @@
                 <a onclick="abrir()" href="#">REGISTRE-SE</a>
             </li>
         </ul>
+       
     </header>
 
-    <main class="introducao-bg box-apresentacao">
+    <section class="introducao-bg box-apresentacao">
         <div class="introducao container">
             <div class="informacao">
                 <h1 class="font-2-xl cor-0">AQUI NÃO SE <br> <span class="font-1-xxl">TREINA FOFO</span></h1>
@@ -89,7 +90,7 @@
                 <div class="cor-terciaria"></div>
             </div>
         </div>
-    </main>
+    </section>
     <section class="letreiro-bg">
         <div class="letreiro">
             <p class="texto-letreiro font-1-bn cor-0">Consultoria Indidvidual</p>
